2003-04-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add pppd.
	* Makefile.am: Add pppd.

2003-04-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Adding pppd:
	* pppd/Makefile-user: New, copied over from libnetworking/pppd/example.
	* pppd/README: New, copied over from libnetworking/pppd/example.
	* pppd/init.c: New, copied over from libnetworking/pppd/example.
	* pppd/netconfig.h: New, copied over from libnetworking/pppd/example.
	* pppd/ppp.conf: New, copied over from libnetworking/pppd/example.
	* pppd/pppdapp.c: New, copied over from libnetworking/pppd/example.
	* pppd/system.h: New, copied over from libnetworking/pppd/example.
	* pppd/pppd.options: New, copied over from libnetworking/pppd/example.
	* pppd/Makefile.am: New, converted to automake from Makefile-user.
	* pppd/.cvsignore: New.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-27	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, configure.ac: Added new test loopback which shows how to
	use the loopback interface. Thank you Eric Norum for a portable
	target independent test which exercises the TCP/IP. This should
	prevent massive failures in the TCP/IP stack from reaching the
	street.
	* loopback/.cvsignore, loopback/Makefile.am, loopback/README,
	loopback/init.c, loopback/loopback.scn: New files.

2003-01-03	Joel Sherrill <joel@OARcorp.com>

	* unlimited/system.h, unlimited/test1.c: Backed off previous
	modification as it does not compile.

2002-10-31	Chris Johns <ccj@acm.org>

	* unlimited/test1.c: PR296. Only fails if more tasks than allowed
	can be created.  
	* unlimited/system.h: PR296. Reference the number of tasks in the
	configuration table rather than a hardcoded number.

2002-11-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
