@@ -3,7 +3,11 @@
 #define SYSTEM_H
 
 #include <rtems.h>
+
+/* HACK */
+#if defined(__i386__)
 #include <tty_drv.h>
+#endif
 
 /* functions */
 extern rtems_task Init(rtems_task_argument argument);
@@ -15,8 +19,11 @@ extern rtems_task Init(rtems_task_argument argument);
 rtems_driver_address_table Device_drivers[5] = {
   CONSOLE_DRIVER_TABLE_ENTRY,
   CLOCK_DRIVER_TABLE_ENTRY,
+/* HACK */
+#if defined(__i386__)
   TTY1_DRIVER_TABLE_ENTRY,
   TTY2_DRIVER_TABLE_ENTRY,
+#endif
   {NULL, NULL, NULL, NULL, NULL, NULL}
 };
 #endif
