@@ -1,3 +1,7 @@
+2003-06-04	Joel Sherrill <joel@OARcorp.com>
+
+	* pppd/system.h: Hack from Ralf to compile on all targets.
+
 2003-04-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Add pppd.
